# analysis-pipeline

./: .gitmodules  Doxyfile  Doxyfile.in  Makefile.am  README.md  configure.ac
base/: AbstractApplication.cpp  AbstractApplication.h  AnalysisRingItems.h  CommonCode.txt  DataReader.cpp  DataReader.h  DataWriter.cpp  DataWriter.h  MPIParameterDealer.cpp  MPIParameterDealer.h  MPIParameterFarmer.cpp  MPIParameterFarmer.h  MPIParameterOutput.cpp  MPIParameterOutput.h  MPIParametersToParametersWorker.cpp  MPIParametersToParametersWorker.h  MPIRawReader.cpp  MPIRawReader.h  MPIRawToParametersWorker.cpp  MPIRawToParametersWorker.h  MPITriggerSorter.cpp  MPITriggerSorter.h  Makefile.am  ParameterOutputter.h  ParameterReader.h  TCLParameterReader.cpp  TCLParameterReader.h  TreeParameter.cpp  TreeParameter.h  TreeParameterArray.cpp  TreeParameterArray.h  TreeVariable.cpp  TreeVariable.h  TreeVariableArray.cpp  TreeVariableArray.h  TriggerSorter.cpp  TriggerSorter.h  parintest.cpp  parinworkertests.cpp  passthruTest.cpp  (+20 more)
pages/: application.md  buildandrunraw.md  mainpage.md  parametermapping.md  paramfileformat.md  paramparamapp.md  paramparamcompileandrun.md  paramparamworker.md  paramstoparams.md  rawtoparameters.md  spectclworker.md  tcldeffile.md  treeparameterinfo.md
spectcl/: Analyzer.cpp  Analyzer.h  BufferDecoder.cpp  BufferDecoder.h  Event.cpp  Event.h  EventProcessor.cpp  EventProcessor.h  Makefile.am  SpecTclTypes.h  SpecTclWorker.cpp  SpecTclWorker.h  eventtests.cpp  spectclTest.cpp  testSpecTcl.cpp  workerTest.cpp
